Fixing minor search result clipping

--- a/app/assets/stylesheets/all/frasernw.css.scss
+++ b/app/assets/stylesheets/all/frasernw.css.scss
@@ -168,6 +168,16 @@ body
       }
     }
     
+    li.result:last-of-type
+    {
+      -webkit-border-bottom-right-radius: 10px;
+      -webkit-border-bottom-left-radius: 10px;
+      -moz-border-bottom-left-radius: 10px;
+      -moz-border-bottom-right-radius: 10px;
+      border-bottom-left-radius: 10px;
+      border-bottom-right-radius: 10px;
+    }
+    
     li.empty
     {
       padding: 10px 20px;
